Twenty Fourteen: adjust spacing for site description (tagline) to avoid cutting off accented characters. Props SergeyBiryukov, iamtakashi. Fixes #28397. Built from https://develop.svn.wordpress.org/trunk@28630
git-svn-id: http://core.svn.wordpress.org/trunk@28450 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -3655,7 +3655,7 @@ a.post-thumbnail:hover {
 
 	.site-description {
 		display: block;
-		margin: -3px 0 21px;
+		margin: 0 0 18px;
 	}
 
 	.site-description:empty {
